--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>AIMLAB</title>
+  <title>AI4Forensics</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
@@ -35,9 +35,9 @@
       <div class="banner-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <h2 class="add-top-margin-small">AIMLAB @ UvA Informatics Institute, Amsterdam</h2>
+            <h2 class="add-top-margin-small">AI4Forensics @ UvA Informatics Institute, Amsterdam</h2>
             <p class="text">
-              The AIM Lab (AI for Medical Imaging) is a collaborative initiative of the <a href="http://www.inceptioniai.org/en/">Inception Institute of Artificial Intelligence </a>  from the United Arab Emirates and the <a href="https://www.uva.nl/"> University of Amsterdam </a>. It focuses on using artificial intelligence for medical image recognition.
+              The AI4Forensics Lab is a collaborative initiative of the <a href="http://www.nfi.nl/">Netherlands Forensic Institute </a> and the <a href="https://www.uva.nl/"> University of Amsterdam </a>. Our focus is on the study and development of artificial intelligence for forensic purposes.
             </p>
           </div>
         </div>
@@ -54,101 +54,20 @@
             <hr>
             <ul>
             <!-------------------------------------------------------------------------------------------->
+              <!-- 
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[February 2023]</span>
                   Yingjun published a paper <a href="https://arxiv.org/abs/2304.00101">"SuperDisco: Super-Class Discovery Improves
 Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
                 </p>
-              </li>
+              </li> 
+              -->
              <!-------------------------------------------------------------------------------------------->
               <li>
                 <p class="text-small-margin">
-                  <span style="color: #1b7677;">[January 2023]</span>
-                  Ivona published a paper <a href="https://openreview.net/pdf?id=3oWo92cQyxL">"Meta Learning To Bridge Vision and Language Models for Multimodal Few-Shot Learning"</a> in the ICLR 2023.
-                </p>
-              </li>
-               <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[January 2023]</span>
-                  Zehao published a paper <a href="https://openreview.net/pdf?id=3dnrKbeVatv">"Energy-Based Test Sample Adaptation for Domain Generalization"</a> in the ICLR 2023.
-                </p>
-              </li>
-              <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[September 2022]</span>
-                  Tom published a paper <a href="https://openaccess.thecvf.com/content/WACV2023/papers/van_Sonsbeek_Probabilistic_Integration_of_Object_Level_Annotations_in_Chest_X-Ray_Classification_WACV_2023_paper.pdf">"Probabilistic Integration of object level annotations in Chest X-ray classification"</a> in the WACV 2023.
-                </p>
-              </li>
-<!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[October 2022]</span>
-                  Jiayi published a paper <a href="https://openreview.net/pdf?id=Q82UCjXNSWL">"Association Graph Learning for Multi-Task Classification with Category Shifts"</a> in the NeurIPS 2022.
-                </p>
-              </li> <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[September 2022]</span>
-                  Our group has moved from Science Park 904 to the new LAB42 building.
-                </p>
-              </li>
-              <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[September 2022]</span>
-                  Ivona  published a paper <a href="https://www.sciencedirect.com/science/article/pii/S1361841522002341">"Uncertainty-aware report generation for chest X-rays by variational topic inference"</a> in the Medical Image Analysis journal.
-                </p>
-              </li>
-              <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[September 2022]</span>
-                  New website Launch.
-                </p>
-              </li>
-               <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[July 2022]</span>
-                   <a href="https://scholar.google.ca/citations?user=DnBb3e0AAAAJ&hl=en"> Xiantong Zhen </a> left us for another job. 
-                </p>
-              </li>
-               <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[June 2022]</span>
-                  Mohammad, Ivona and Tom published a paper <a href="https://arxiv.org/pdf/2204.05737.pdf">"LifeLonger: A Benchmark for Continual Disease Classification"</a> in the MICCAI 2022.
-                </p>
-              </li>
-               <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[March 2022]</span>
-                  Yunhua published a paper <a href="https://arxiv.org/pdf/2203.14240.pdf">"Audio-Adaptive Activity Recognition Across Video Domains"</a> in the CVPR 2022.
-                </p>
-              </li>
-               <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[March 2022]</span>
-                  Yingjun published a paper <a href="https://ieeexplore.ieee.org/document/9722994">"MetaKernel: Learning Variational Random Features with Limited Labels"</a> in the IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) .
-                </p>
-              </li>
-                <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[January 2022]</span>
-                  Yingjun published a paper <a href="https://openreview.net/pdf?id=i3RI65sR7N">"Hierarchical Variational Memory for Few-shot Learning Across Domains"</a> in the ICLR 2022.
-                </p>
-              </li>
-                <!-------------------------------------------------------------------------------------------->
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[January 2022]</span>
-                  Zehao published a paper <a href="https://arxiv.org/pdf/2202.08045.pdf">"Learning to generalize across domains on single test samples"</a> in the ICLR 2022. 
+                  <span style="color: #1b7677;">[March 2023]</span>
+                  On March 14, the AI4Forensics lab was officially opened. It was a festive afternoon with interesting talks and drink afterward.
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
@@ -186,16 +105,16 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <!-------------------------------------------------------------------------------------------->
 <!--           <div class="flex-column"> -->
           <div class="directors">
-            <img src="img/people/cees.jpeg"> 
-             <a href="http://www.ceessnoek.info"> 
-            <h3>Cees Snoek</h3> </a>
+            <img src="img/people/zeno.jpeg"> 
+             <a href="https://geradts.com/"> 
+            <h3>Zeno Geradts</h3> </a>
             <div>Professor</div>
             <div>
-                <a href="https://scholar.google.com/citations?user=0uKdbscAAAAJ&amp;hl=en" target="_blank" rel="noopener">
+                <a href="https://scholar.google.com/citations?hl=nl&user=fX4Uvc0AAAAJ" target="_blank" rel="noopener">
                   Scholar
                 </a>
                 &nbsp;|&nbsp;              
-                 <a href="https://www.linkedin.com/in/cgmsnoek" target="_blank" rel="noopener">
+                 <a href="https://be.linkedin.com/in/forensic" target="_blank" rel="noopener">
                   LinkedIn
                 </a>
             </div>
