--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               &nbsp;|&nbsp;
               <a href="https://nl.linkedin.com/in/mereldldb">LinkedIn</a>
                 &nbsp;|&nbsp;
-             <!-- <a href="https://github.com/YDU-uva">Github</a> __>
+             <!-- <a href="https://github.com/YDU-uva">Github</a> -->
             </div>
             <div>&nbsp;</div>
           </div>
@@ -171,7 +171,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
        
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <img src="img/people/elina.jpeg">
+            <img src="img/people/eleni.jpeg">
             <!-- <a href = "https://yingjundu.github.io/" align="center"> -->
             <h3>Eleni-Konstantina Sergidou</h3> 
             <a>
