--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <div class="col-md-12" align="center">
               <h2 class="mb-4">Postdocs</h2>
             </div>
-          <div class="gallery add-top-margin-small add-bottom-margin-small" id="phd-student">
+          <div class="gallery add-top-margin-small add-bottom-margin-small" id="postdoc">
           <!-------------------------------------------------------------------------------------------->
           
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
             <img src="img/people/merel.jpeg">
-            <!-- <a href = "https://yingjundu.github.io/" align="center"> -->
+            <!-- <a href = "https://mereldldb2.github.io/" align="center"> -->
             <h3>Merel de Leeuw den Bouter</h3> 
             <a>
             <div align="center">Postdoc</div>
@@ -154,8 +154,8 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               <a href="https://scholar.google.com/citations?hl=nl&user=OK2uC1sAAAAJ">Scholar</a>
               &nbsp;|&nbsp;
               <a href="https://nl.linkedin.com/in/mereldldb">LinkedIn</a>
-                &nbsp;|&nbsp;
-             <!-- <a href="https://github.com/YDU-uva">Github</a> -->
+                &nbsp;|<!-- &nbsp;
+              <a href="https://github.com/YDU-uva">Github</a> -->
             </div>
             <div>&nbsp;</div>
           </div>
@@ -173,7 +173,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <div class="flex-column">
             <img src="img/people/eleni.jpeg">
             <!-- <a href = "https://yingjundu.github.io/" align="center"> -->
-            <h3>Eleni-Konstantina Sergidou</h3> 
+            <h3>Eleni Sergidou</h3> 
             <a>
             <div align="center">PhD Student</div>
             <div>
