--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <div>&nbsp;</div>
           </div>
           <!-------------------------------------------------------------------------------------------->
-           <div class="directors">
+           <div class="team">
             <img src="img/people/marcel.jpeg">
             <a href = "https://staff.fnwi.uva.nl/m.worring/" align="center"> 
             <h3>Marcel Worring</h3>
@@ -128,6 +128,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           </div> 
           
           <!-------------------------------------------------------------------------------------------->
+          <div class="team">
             <img src="img/people/merel.jpeg">
             <!-- <a href = "https://mereldldb2.github.io/" align="center"> -->
             <h3>Merel de Leeuw den Bouter</h3> 
@@ -138,7 +139,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               &nbsp;|&nbsp;
               <a href="https://nl.linkedin.com/in/mereldldb">LinkedIn</a>
                 &nbsp;|<!-- &nbsp;
-              <a href="https://github.com/YDU-uva">Github</a> -->
+              <a href="https://github.com/mereldldb2">Github</a> -->
             </div>
             <div>&nbsp;</div>
           </div>
@@ -147,7 +148,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
       
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <img src="img/people/eleni.jpeg">
+            <img src="img/people/eleni.jpg">
             <!-- <a href = "https://yingjundu.github.io/" align="center"> -->
             <h3>Eleni Sergidou</h3> 
             <a>
