--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <div>&nbsp;</div>
           </div>
           <!-------------------------------------------------------------------------------------------->
-           <div class="team">
+           <div class="flex-column">
             <img src="img/people/marcel.jpeg">
             <a href = "https://staff.fnwi.uva.nl/m.worring/" align="center"> 
             <h3>Marcel Worring</h3>
@@ -127,7 +127,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <div>&nbsp;</div>
           </div> 
           <!-------------------------------------------------------------------------------------------->
-          <div class="team">
+          <div class="flex-column">
             <img src="img/people/merel.jpeg">
             <!-- <a href = "https://staff.fnwi.uva.nl/m.worring/" align="center"> -->
             <h3>Merel de Leeuw den Bouter</h3>
