--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
            <div class="flex-column">
             <img src="img/people/marcel.jpeg">
             <a href = "https://staff.fnwi.uva.nl/m.worring/" align="center"> 
-            <h3>Marcel Worring</h3>
+            <h3>Marcel Worring</h3 align="center">
             </a>
             <div>Professor</div>
             <div>
@@ -165,41 +165,41 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <h3>Meike Kombrink</h3>
             <div>PhD Student</div>
             <div>
-             <a href="https://scholar.google.com/citations?user=ovqQIMUAAAAJ&hl">Scholar</a>
-             &nbsp;|&nbsp;
-              <a href="https://www.linkedin.com/in/tom-van-sonsbeek/">LinkedIn</a>
-              &nbsp;|&nbsp;
-              <a href="https://github.com/tjvsonsbeek">Github</a>
+             <!-- <a href="https://scholar.google.com/citations?user=ovqQIMUAAAAJ&hl">Scholar</a>
+             &nbsp;|&nbsp; -->
+              <a href="https://nl.linkedin.com/in/meike-kombrink">LinkedIn</a>
+              &nbsp; <!-- |&nbsp;
+              <a href="https://github.com/tjvsonsbeek">Github</a> -->
             </div>
             <div>&nbsp;</div>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <img src="img/people/conor.jpeg">
+            <img src="img/people/conor.jpg">
             <a href = "https://ivonajdenkoska.github.io/" align="center"> 
-            <h3>Ivona Najdenkoska</h3>
+            <h3>Conor McCarthy</h3>
             <div>PhD Student</div>
             <div>
-              <a href="https://scholar.google.com/citations?user=2rFidrcAAAAJ&hl">Scholar</a>
+              <!-- <a href="https://scholar.google.com/citations?user=2rFidrcAAAAJ&hl">Scholar</a>
               &nbsp;|&nbsp;
               <a href="https://www.linkedin.com/in/ivona-najdenkoska/">LinkedIn</a>
               &nbsp;|&nbsp;
               <a href="https://github.com/ivonajdenkoska">Github</a>
-            </div>
+            </div> -->
             <div>&nbsp;</div>
           </div>
               <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <img src="img/people/goncalo.jpeg">
+            <img src="img/people/goncalo.jpg">
             <a href = "https://zzzx1224.github.io/" align="center"> 
-            <h3>Zehao Xiao</h3>
+            <h3>Gonçalo Marcelino</h3>
             <div>PhD Student</div>
             <div>
-             <a href="https://scholar.google.com.hk/citations?user=iteDHOsAAAAJ&hl=en">Scholar</a>
+             <a href="https://scholar.google.com/citations?hl=nl&user=QTRztlAAAAAJ">Scholar</a>
               &nbsp;|&nbsp;
-              <a href="https://www.linkedin.com/in/jiayi-shen-671425141/">LinkedIn</a>
-               &nbsp;|&nbsp;
-              <a href="https://github.com/zzzx1224">Github</a>
+              <a href="https://www.linkedin.com/in/goncalobfm//">LinkedIn</a>
+               &nbsp; <!-- |&nbsp;
+              <a href="https://github.com/zzzx1224">Github</a> -->
             </div>
             <div>&nbsp;</div>
           </div>
