--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <!-------------------------------------------------------------------------------------------->
            <div class="flex-column">
             <img src="img/people/marcel.jpeg">
-            <a href = "https://staff.fnwi.uva.nl/m.worring/" align="center"> 
-            <h3>Marcel Worring</h3 align="center">
+            <a href = "https://staff.fnwi.uva.nl/m.worring/"> 
+            <h3>Marcel Worring</h3>
             </a>
             <div>Professor</div>
             <div>
@@ -176,7 +176,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
             <img src="img/people/conor.jpg">
-            <a href = "https://ivonajdenkoska.github.io/" align="center"> 
+            <!-- <a href = "https://ivonajdenkoska.github.io/" align="center"> -->
             <h3>Conor McCarthy</h3>
             <div>PhD Student</div>
             <div>
@@ -184,14 +184,14 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               &nbsp;|&nbsp;
               <a href="https://www.linkedin.com/in/ivona-najdenkoska/">LinkedIn</a>
               &nbsp;|&nbsp;
-              <a href="https://github.com/ivonajdenkoska">Github</a>
-            </div> -->
+              <a href="https://github.com/ivonajdenkoska">Github</a> -->
+            </div> 
             <div>&nbsp;</div>
           </div>
               <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
             <img src="img/people/goncalo.jpg">
-            <a href = "https://zzzx1224.github.io/" align="center"> 
+            <!-- <a href = "https://zzzx1224.github.io/" align="center"> -->
             <h3>Gonçalo Marcelino</h3>
             <div>PhD Student</div>
             <div>
