--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <div>
              <a href="https://scholar.google.com/citations?hl=nl&user=QTRztlAAAAAJ">Scholar</a>
               &nbsp;|&nbsp;
-              <a href="https://www.linkedin.com/in/goncalobfm//">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/goncalobfm/">LinkedIn</a>
                &nbsp; <!-- |&nbsp;
               <a href="https://github.com/zzzx1224">Github</a> -->
             </div>
@@ -237,7 +237,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               Informatics Institute, University of Amsterdam, Science Park 900, 1098 XH Amsterdam, The Netherlands.
             </p>
             <p class="text add-bottom-margin-large">
-              Email: cgmsnoek@uva.nl
+              Email: m.worring@uva.nl
             </p>
           </div>
         </div>
@@ -264,7 +264,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-             <a href="https://www.inceptioniai.org/en"><img loading="lazy" src="img/iiai-logo-1.jpeg"></a>
+             <a href="https://www.nfi.nl"><img loading="lazy" src="img/nfi-logo.jpeg"></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
         </div>
