--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
             <img src="img/people/zeno.jpeg"> 
-             <a href="https://geradts.com/"> 
             <h3>Zeno Geradts</h3> </a>
             <div>Professor</div>
             <div>
+              <a href = "https://geradts.com/" target="_blank" rel="noopener"> Website</a>              
+              &nbsp;|&nbsp;
                 <a href="https://scholar.google.com/citations?hl=nl&user=fX4Uvc0AAAAJ" target="_blank" rel="noopener">
                   Scholar
                 </a>
@@ -115,30 +116,30 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <!-------------------------------------------------------------------------------------------->
            <div class="flex-column">
             <img src="img/people/marcel.jpeg">
-            <a href = "https://staff.fnwi.uva.nl/m.worring/"> 
             <h3>Marcel Worring</h3>
             </a>
             <div>Professor</div>
             <div>
-              <a href="https://scholar.google.com/citations?user=pdu8f3sAAAAJ&hl=en">Scholar</a>
+              <a href = "https://staff.fnwi.uva.nl/m.worring/" target="_blank" rel="noopener"> Website</a>              
               &nbsp;|&nbsp;
-              <a href="https://www.linkedin.com/in/marcel-worring/">LinkedIn</a>
+              <a href="https://scholar.google.com/citations?user=pdu8f3sAAAAJ&hl=en" target="_blank" rel="noopener">Scholar</a>
+              &nbsp;|&nbsp;
+              <a href="https://www.linkedin.com/in/marcel-worring/" target="_blank" rel="noopener">LinkedIn</a>
             </div>
             <div>&nbsp;</div>
           </div> 
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
             <img src="img/people/merel.jpeg">
-            <!-- <a href = "https://staff.fnwi.uva.nl/m.worring/" align="center"> -->
             <h3>Merel de Leeuw den Bouter</h3>
             </a>
             <div>Postdoc</div>
             <div>
-              <a href="https://scholar.google.com/citations?hl=nl&user=OK2uC1sAAAAJ">Scholar</a>
+              <a href="https://scholar.google.com/citations?hl=nl&user=OK2uC1sAAAAJ" target="_blank" rel="noopener">Scholar</a>
               &nbsp;|&nbsp;
-              <a href="https://nl.linkedin.com/in/mereldldb">LinkedIn</a>
+              <a href="https://nl.linkedin.com/in/mereldldb" target="_blank" rel="noopener">LinkedIn</a>
               <!-- &nbsp;|<!-- &nbsp;
-              <a href="https://github.com/mereldldb2">Github</a> -->
+              <a href="https://github.com/mereldldb2" target="_blank" rel="noopener">Github</a> -->
             </div>
             <div>&nbsp;</div>
           </div> 
@@ -151,9 +152,9 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <a>
             <div align="center">PhD Student</div>
             <div>
-              <!-- <a href="https://scholar.google.com/citations?user=N1q5mfMAAAAJ&hl=en">Scholar</a>
+              <!-- <a href="https://scholar.google.com/citations?user=N1q5mfMAAAAJ&hl=en" >Scholar</a>
               &nbsp;|&nbsp; -->
-              <a href="https://nl.linkedin.com/in/eksergidou">LinkedIn</a>
+              <a href="https://nl.linkedin.com/in/eksergidou" target="_blank" rel="noopener">LinkedIn</a>
                 &nbsp;|&nbsp;
               <!-- <a href="https://github.com/YDU-uva">Github</a> -->
             </div>
@@ -167,7 +168,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <div>
              <!-- <a href="https://scholar.google.com/citations?user=ovqQIMUAAAAJ&hl">Scholar</a>
              &nbsp;|&nbsp; -->
-              <a href="https://nl.linkedin.com/in/meike-kombrink">LinkedIn</a>
+              <a href="https://nl.linkedin.com/in/meike-kombrink" target="_blank" rel="noopener">LinkedIn</a>
               &nbsp; <!-- |&nbsp;
               <a href="https://github.com/tjvsonsbeek">Github</a> -->
             </div>
@@ -187,6 +188,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               <a href="https://github.com/ivonajdenkoska">Github</a> -->
             </div> 
             <div>&nbsp;</div>
+            <div>&nbsp;</div>
           </div>
               <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
@@ -195,9 +197,9 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <h3>Gonçalo Marcelino</h3>
             <div>PhD Student</div>
             <div>
-             <a href="https://scholar.google.com/citations?hl=nl&user=QTRztlAAAAAJ">Scholar</a>
+             <a href="https://scholar.google.com/citations?hl=nl&user=QTRztlAAAAAJ" target="_blank" rel="noopener">Scholar</a>
               &nbsp;|&nbsp;
-              <a href="https://www.linkedin.com/in/goncalobfm/">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/goncalobfm/" target="_blank" rel="noopener">LinkedIn</a>
                &nbsp; <!-- |&nbsp;
               <a href="https://github.com/zzzx1224">Github</a> -->
             </div>
@@ -256,15 +258,15 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
         <div  class="gallery add-top-margin-small add-bottom-margin-small"  id="current-Sponsors">
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <a href="https://icai.ai/"><img loading="lazy" src="img/icai-logo.jpg" ></a>
+            <a href="https://icai.ai/" target="_blank" rel="noopener"><img loading="lazy" src="img/icai-logo.jpg" ></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <a href="https://uva.nl/"><img loading="lazy" src="img/uva-logo.png"></a>
+            <a href="https://uva.nl/" target="_blank" rel="noopener"><img loading="lazy" src="img/uva-logo.png"></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-             <a href="https://www.nfi.nl"><img loading="lazy" src="img/nfi-logo.jpeg"></a>
+             <a href="https://www.nfi.nl" target="_blank" rel="noopener"><img loading="lazy" src="img/nfi-logo.png"></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
         </div>
