--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="flex-item flex-column">
             <h2 class="add-top-margin-small">AI4Forensics @ UvA Informatics Institute, Amsterdam</h2>
             <p class="text">
-              The AI4Forensics Lab is a collaborative initiative of the <a href="http://www.nfi.nl/">Netherlands Forensic Institute </a> and the <a href="https://www.uva.nl/"> University of Amsterdam </a>. Our focus is on the study and development of artificial intelligence for forensic purposes.
+              The AI4Forensics Lab is a collaborative initiative of the <a href="http://www.nfi.nl/ target="_blank" rel="noopener"" >Netherlands Forensic Institute </a> and the <a href="https://www.uva.nl/" target="_blank" rel="noopener"> University of Amsterdam </a>. Our focus is on the study and development of artificial intelligence for forensic purposes.
             </p>
           </div>
         </div>
@@ -138,7 +138,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               <a href="https://scholar.google.com/citations?hl=nl&user=OK2uC1sAAAAJ" target="_blank" rel="noopener">Scholar</a>
               &nbsp;|&nbsp;
               <a href="https://nl.linkedin.com/in/mereldldb" target="_blank" rel="noopener">LinkedIn</a>
-              <!-- &nbsp;|<!-- &nbsp;
+              &nbsp;|<!-- &nbsp;
               <a href="https://github.com/mereldldb2" target="_blank" rel="noopener">Github</a> -->
             </div>
             <div>&nbsp;</div>
@@ -155,8 +155,8 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               <!-- <a href="https://scholar.google.com/citations?user=N1q5mfMAAAAJ&hl=en" >Scholar</a>
               &nbsp;|&nbsp; -->
               <a href="https://nl.linkedin.com/in/eksergidou" target="_blank" rel="noopener">LinkedIn</a>
-                &nbsp;|&nbsp;
-              <!-- <a href="https://github.com/YDU-uva">Github</a> -->
+                &nbsp;<!-- |&nbsp;
+              <a href="https://github.com/YDU-uva">Github</a> -->
             </div>
             <div>&nbsp;</div>
           </div>
