--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <div class="flex-item flex-column">
             <h2>Contact Us <a id="Contact"> </a></h2>
             <p class="text no-bottom-margin">
-              If you have any questions regarding our group and research feel free to contact us via the details provided below.
+              If you have any questions regarding our group and/or research, feel free to contact us.
             </p>
             <p class="text no-bottom-margin">
               Informatics Institute, University of Amsterdam, Science Park 900, 1098 XH Amsterdam, The Netherlands.
