add Folia article

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               </li> 
               -->
              <!-------------------------------------------------------------------------------------------->
+             <li>
+                <p class="text-small-margin">
+                  <span style="color: #1b7677;">[March 2023]</span>
+                  <a href="https://www.folia.nl/international/156524/in-this-lab-algorithms-help-unravel-criminals-hidden-messages">"In this lab, algorithms help unravel criminals’ hidden messages" target="_blank" rel="noopener"</a>: Folia published an interview with Meike and Eleni on the opening of the AI4Forensics lab: " 
+                </p>
+              </li>
+              <!-------------------------------------------------------------------------------------------->
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[March 2023]</span>
@@ -138,7 +145,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               <a href="https://scholar.google.com/citations?hl=nl&user=OK2uC1sAAAAJ" target="_blank" rel="noopener">Scholar</a>
               &nbsp;|&nbsp;
               <a href="https://nl.linkedin.com/in/mereldldb" target="_blank" rel="noopener">LinkedIn</a>
-              &nbsp;|<!-- &nbsp;
+              &nbsp;<!--| &nbsp;
               <a href="https://github.com/mereldldb2" target="_blank" rel="noopener">Github</a> -->
             </div>
             <div>&nbsp;</div>
