--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
              <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[March 2023]</span>
-                  <a href="https://www.folia.nl/international/156524/in-this-lab-algorithms-help-unravel-criminals-hidden-messages">"In this lab, algorithms help unravel criminals’ hidden messages" target="_blank" rel="noopener"</a>: Folia published an interview with Meike and Eleni on the opening of the AI4Forensics lab: " 
+                  <a href="https://www.folia.nl/international/156524/in-this-lab-algorithms-help-unravel-criminals-hidden-messages" target="_blank" rel="noopener">"In this lab, algorithms help unravel criminals’ hidden messages"</a>: Folia published an interview with Meike and Eleni on the opening of the AI4Forensics lab: " 
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
@@ -269,7 +269,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <a href="https://uva.nl/" target="_blank" rel="noopener"><img loading="lazy" src="img/uva-logo.png"></a>
+            <a href="https://uva.nl/" target="_blank" rel="noopener"><img loading="lazy" src="img/uva-logo.png" width="354" height="auto"></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
