--- a/index.html
+++ b/index.html
@@ -265,11 +265,11 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
         <div  class="gallery add-top-margin-small add-bottom-margin-small"  id="current-Sponsors">
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <a href="https://icai.ai/" target="_blank" rel="noopener"><img loading="lazy" src="img/icai-logo.jpg" ></a>
+            <a href="https://icai.ai/" target="_blank" rel="noopener"><img loading="lazy" src="img/icai-logo.jpg" width="450" height="auto"></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <a href="https://uva.nl/" target="_blank" rel="noopener"><img loading="lazy" src="img/uva-logo.png" width="354" height="auto"></a>
+            <a href="https://uva.nl/" target="_blank" rel="noopener"><img loading="lazy" src="img/uva-logo.png" width="450" height="auto"></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
