--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[March 2023]</span>
-                  On March 14, the AI4Forensics lab was officially opened. It was a festive afternoon with interesting talks and drinks afterward.
+                  On March 14, the AI4Forensics lab was officially opened. It was a festive event with interesting talks and drinks afterward.
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
