--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="content-container">
     <!-------------------------------------------------------------------------------------------->
    <!--  <div class="banner" style="background: url('img/header.jpg') no-repeat center; background-size: cover; height: 580px;"> -->
-    <div class="banner" style="background: url('img/header.jpg') no-repeat center; height: 280px;">
+    <div class="banner" style="background: url('img/ai4forensics-banner.jpg') no-repeat center; height: 280px;">
       <div class="banner-table flex-column">
       </div>
     </div>
