update size banner and sponsor logos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="content-container">
     <!-------------------------------------------------------------------------------------------->
    <!--  <div class="banner" style="background: url('img/header.png') no-repeat center; background-size: cover; height: 580px;"> -->
-    <div class="banner" style="background: url('img/ai4forensics-banner.png') no-repeat center; height: 280px;">
+    <div class="banner" style="background: url('img/ai4forensics-banner.png') no-repeat center; height: 450px;">
       <div class="banner-table flex-column">
       </div>
     </div>
@@ -265,15 +265,15 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
         <div  class="gallery add-top-margin-small add-bottom-margin-small"  id="current-Sponsors">
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <a href="https://icai.ai/" target="_blank" rel="noopener"><img loading="lazy" src="img/icai-logo.png" width="450" height="auto"></a>
+            <a href="https://icai.ai/" target="_blank" rel="noopener"><img loading="lazy" src="img/icai-logo.png" width="370" height="auto"></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <a href="https://uva.nl/" target="_blank" rel="noopener"><img loading="lazy" src="img/uva-logo.png" width="450" height="auto"></a>
+            <a href="https://uva.nl/" target="_blank" rel="noopener"><img loading="lazy" src="img/uva-logo.png" width="370" height="auto"></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-             <a href="https://www.nfi.nl" target="_blank" rel="noopener"><img loading="lazy" src="img/nfi-logo.png"></a>
+             <a href="https://www.nfi.nl" target="_blank" rel="noopener"><img loading="lazy" src="img/nfi-logo.png" width="300" height="auto"></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
         </div>
