--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               <a href="https://scholar.google.com/citations?hl=nl&user=OK2uC1sAAAAJ" target="_blank" rel="noopener">Scholar</a>
               &nbsp;|&nbsp;
               <a href="https://nl.linkedin.com/in/mereldldb" target="_blank" rel="noopener">LinkedIn</a>
-              <!-- &nbsp;| &nbsp;
+              &nbsp;<!--| &nbsp;
               <a href="https://github.com/mereldldb2" target="_blank" rel="noopener">Github</a> -->
             </div>
             <div>&nbsp;</div>
