--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <!-- <a href = "https://yingjundu.github.io/" align="center"> -->
             <h3>Eleni Sergidou</h3> 
             <a>
-            <div align="center">PhD Student</div>
+            <div align="center">PhD student</div>
             <div>
               <!-- <a href="https://scholar.google.com/citations?user=N1q5mfMAAAAJ&hl=en" >Scholar</a>
               &nbsp;|&nbsp; -->
@@ -171,7 +171,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <div class="flex-column">
             <img src="img/people/meike.jpeg">
             <h3>Meike Kombrink</h3>
-            <div>PhD Student</div>
+            <div>PhD student</div>
             <div>
              <!-- <a href="https://scholar.google.com/citations?user=ovqQIMUAAAAJ&hl">Scholar</a>
              &nbsp;|&nbsp; -->
@@ -186,7 +186,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <img src="img/people/conor.jpg">
             <!-- <a href = "https://ivonajdenkoska.github.io/" align="center"> -->
             <h3>Conor McCarthy</h3>
-            <div>PhD Student</div>
+            <div>PhD student</div>
             <div>
               <!-- <a href="https://scholar.google.com/citations?user=2rFidrcAAAAJ&hl">Scholar</a>
               &nbsp;|&nbsp;
@@ -202,7 +202,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <img src="img/people/goncalo.jpg">
             <!-- <a href = "https://zzzx1224.github.io/" align="center"> -->
             <h3>Gonçalo Marcelino</h3>
-            <div>PhD Student</div>
+            <div>PhD student</div>
             <div>
              <a href="https://scholar.google.com/citations?hl=nl&user=QTRztlAAAAAJ" target="_blank" rel="noopener">Scholar</a>
               &nbsp;|&nbsp;
@@ -233,6 +233,48 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
         <!-------------------------------------------------------------------------------------------->
       </div>
     </div>
+  
+          <div class="flex-row">
+          <div class="flex-item flex-column full-width">
+            <h2>Team <a id="Former team members"> </a></h2>
+            <hr>
+          </div>
+        </div>
+        <div class="gallery add-top-margin-small add-bottom-margin-small" id="head">
+          <!-------------------------------------------------------------------------------------------->
+          <div class="flex-column">
+            <img src="img/people/andrea.jpeg"> 
+            <h3>Andrea Macarulla Rodriguez</h3> </a>
+            <div>Former PhD student</div>
+            <div>
+                <a href="https://scholar.google.com/citations?user=akIpbtQAAAAJ&hl=nl&oi=ao" target="_blank" rel="noopener">
+                  Scholar
+                </a>
+                &nbsp;|&nbsp;              
+                 <a href="https://nl.linkedin.com/in/andrea-macarulla-rodriguez?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank" rel="noopener">
+                  LinkedIn
+                </a>
+            </div>
+            <div>&nbsp;</div>
+          </div>
+          <!-------------------------------------------------------------------------------------------->
+           <div class="flex-column">
+            <img src="img/people/javier.jpeg">
+            <h3>Javier Lloret Pardo</h3>
+            </a>
+            <div>Former PhD student</div>
+            <div>
+              <a href = "https://javierlloret.com/" target="_blank" rel="noopener"> Website</a>              
+              &nbsp;<!--|&nbsp;
+              <a href="https://www.linkedin.com/in/marcel-worring/" target="_blank" rel="noopener">LinkedIn</a>-->
+            </div>
+            <div>&nbsp;</div>
+          </div> 
+          <!-------------------------------------------------------------------------------------------->
+      </div>
+    </div>
+  
+  
     <!-------------------------------------------------------------------------------------------->
     <div class="banner">
       <div class="banner-table flex-column">
