--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
     <div class="menu-items flex-row-center flex-item">
       <a href="index.html" class="menu-index">Overview</a>
       <a href="index.html#Team">Team</a>
-      <!-- <a href="publications.html" class="menu-publications">Publications</a> -->
+      <a href="publications.html" class="menu-publications">Publications</a>
       <a href="index.html#Contact">Contact</a>
 <!--       <a href="https://github.com/AIMLAB-uva">GitHub</a> -->
     </div>
