--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
         
         <div class="flex-row">
           <div class="flex-item flex-column full-width">
-            <h2>Team <a id="Former team members"> </a></h2>
+            <h2>Former team members <a id="Former team"> </a></h2>
             <hr>
           </div>
         </div>
