--- a/publications.html
+++ b/publications.html
@@ -119,7 +119,7 @@
         <!--End Publications 2022-->
         <!-------------------------------------------------------------------------------------------->
         <!-------------------------------------------------------------------------------------------->
-        <!--Start Publications 2021-->
+        <!-- <!--Start Publications 2021-->
         <div class="flex-row">
           <div class="flex-item flex-column publications">
             <h2>Publications 2021</h2>
@@ -127,7 +127,7 @@
             <!-------------------------------------------------------------------------------------------->
            <!-------------------------------------------------------------------------------------------->
           </div>
-        </div>
+        </div>-->
         <!--End Publications 2021-->
         <!-------------------------------------------------------------------------------------------->
         <!-------------------------------------------------------------------------------------------->
