--- a/publications.html
+++ b/publications.html
@@ -109,7 +109,7 @@
               <h3><a href="https://doi.org/10.1080/20961790.2018.1509187">Google timeline accuracy assessment and error prediction</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Christian Tiberius, Roel van Bree, Zeno Geradts</li>
-                <li>Forensic sciences research</li>
+                <li>Forensic Sciences Research</li>
                 <!-- <li><a href="https://github.com/mmderakhshani/lifelonger">Code</a></li> -->
               </ul>
             </div>         
