--- a/publications.html
+++ b/publications.html
@@ -119,8 +119,8 @@
         <!--End Publications 2022-->
         <!-------------------------------------------------------------------------------------------->
         <!-------------------------------------------------------------------------------------------->
-        <!-- <!--Start Publications 2021-->
-        <div class="flex-row">
+        <!--Start Publications 2021-->
+        <!-- <div class="flex-row">
           <div class="flex-item flex-column publications">
             <h2>Publications 2021</h2>
             <hr>
