--- a/index.html
+++ b/index.html
@@ -307,15 +307,15 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
         <div  class="gallery add-top-margin-small add-bottom-margin-small"  id="current-Sponsors">
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <a href="https://icai.ai/" target="_blank" rel="noopener"><img loading="lazy" src="img/icai-logo.png" width="370" height="auto"></a>
+            <a href="https://icai.ai/" target="_blank" rel="noopener"><img loading="lazy" src="img/icai-logo.png" ></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <a href="https://uva.nl/" target="_blank" rel="noopener"><img loading="lazy" src="img/uva-logo.png" width="370" height="auto"></a>
+            <a href="https://uva.nl/" target="_blank" rel="noopener"><img loading="lazy" src="img/uva-logo.png" ></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-             <a href="https://www.nfi.nl" target="_blank" rel="noopener"><img loading="lazy" src="img/nfi-logo.png" width="300" height="auto"></a>
+             <a href="https://www.nfi.nl" target="_blank" rel="noopener"><img loading="lazy" src="img/nfi-logo.png" ></a>
           </div>
           <!-------------------------------------------------------------------------------------------->
         </div>
