--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@
             <hr>
 <!-------------------------------------------------------------------------------------------->
             <div>
-              <h3><a href="https://doi.org/10.1016/j.specom.2023.03.010">Frequent-words analysis for forensic speaker comparison</a></h3>
+              <h3><a href="https://doi.org/10.1016/j.specom.2023.03.010 target="_blank" rel="noopener"">Frequent-words analysis for forensic speaker comparison</a></h3>
               <ul>
                 <li>Eleni-Konstantina Sergidou, Nelleke Scheijen, Jeannette Leegwater, Tina Cambier-Langeveld, Wauter Bosma </li>
                 <li> Speech Communication </li>
@@ -62,7 +62,7 @@
               </ul>
             </div> <!-------------------------------------------------------------------------------------------->
              <div>
-              <h3><a href="http://doi.org/10.1109/JSTSP.2023.3267263">Multi-Task Explainable Quality Networks for Large-Scale Forensic Facial Recognition</a></h3>
+              <h3><a href="http://doi.org/10.1109/JSTSP.2023.3267263 target="_blank" rel="noopener"">Multi-Task Explainable Quality Networks for Large-Scale Forensic Facial Recognition</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Luis Unzueta, Zeno Geradts, Marcel Worring, Unai Elordi</li>
                 <li>IEEE Journal of Selected Topics in Signal Processing</li>
@@ -71,7 +71,7 @@
             </div>
             <!-------------------------------------------------------------------------------------------->
             <!-- <div>
-              <h3><a href="https://openreview.net/pdf?id=3dnrKbeVatv">Energy-Based Test Sample Adaptation for Domain Generalization</a></h3>
+              <h3><a href="https://openreview.net/pdf?id=3dnrKbeVatv target="_blank" rel="noopener"">Energy-Based Test Sample Adaptation for Domain Generalization</a></h3>
               <ul>
                 <li>Zehao Xiao,  Xiantong Zhen, Shengcai Liao,  Cees Snoek</li>
                 <li>International Conference on Learning Representations (ICLR 2023)</li>
@@ -89,7 +89,7 @@
             <hr>
 <!-------------------------------------------------------------------------------------------->
             <div>
-              <h3><a href="https://doi.org/10.1016/j.forsciint.2022.111239">Calibration of score based likelihood ratio estimation in automated forensic facial image comparison</a></h3>
+              <h3><a href="https://doi.org/10.1016/j.forsciint.2022.111239 target="_blank" rel="noopener"">Calibration of score based likelihood ratio estimation in automated forensic facial image comparison</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Zeno Geradts, Marcel Worring</li>
                 <li>Forensic Science International</li>
@@ -97,7 +97,7 @@
               </ul>
             </div> <!-------------------------------------------------------------------------------------------->
             <div>
-              <h3><a href=" https://doi.org/10.1111/1556-4029.14324">Likelihood ratios for deep neural networks in face comparison</a></h3>
+              <h3><a href=" https://doi.org/10.1111/1556-4029.14324 target="_blank" rel="noopener"">Likelihood ratios for deep neural networks in face comparison</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Zeno Geradts, Marcel Worring</li>
                 <li>Journal of Forensic Sciences</li>
@@ -106,7 +106,7 @@
             </div>
             <!-------------------------------------------------------------------------------------------->
             <div>
-              <h3><a href="https://doi.org/10.1080/20961790.2018.1509187">Google timeline accuracy assessment and error prediction</a></h3>
+              <h3><a href="https://doi.org/10.1080/20961790.2018.1509187 target="_blank" rel="noopener"">Google timeline accuracy assessment and error prediction</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Christian Tiberius, Roel van Bree, Zeno Geradts</li>
                 <li>Forensic Sciences Research</li>
